@@ -1,3 +1,9 @@
+2010-02-04 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* godmode/agentes/configurar_agente.php, godmode/agentes/agent_manager.php:
+	add in the agent config form the fields Icon agent select and Ignore new
+	GIS data.
+
 2010-02-01  Sancho Lerena <slerena@artica.es>
 
 	Changes ported from 3.0 branch.
